@@ -15,10 +15,10 @@ import info.nightscout.androidaps.Constants;
 import info.nightscout.androidaps.MainApp;
 import info.nightscout.androidaps.R;
 import info.nightscout.androidaps.data.DetailedBolusInfo;
+import info.nightscout.androidaps.data.Intervals;
 import info.nightscout.androidaps.data.Iob;
 import info.nightscout.androidaps.data.IobTotal;
 import info.nightscout.androidaps.data.MealData;
-import info.nightscout.androidaps.data.Intervals;
 import info.nightscout.androidaps.data.NonOverlappingIntervals;
 import info.nightscout.androidaps.data.OverlappingIntervals;
 import info.nightscout.androidaps.data.Profile;
@@ -33,8 +33,8 @@ import info.nightscout.androidaps.events.EventReloadTempBasalData;
 import info.nightscout.androidaps.events.EventReloadTreatmentData;
 import info.nightscout.androidaps.events.EventTempTargetChange;
 import info.nightscout.androidaps.interfaces.PluginBase;
-import info.nightscout.androidaps.interfaces.PumpInterface;
 import info.nightscout.androidaps.interfaces.TreatmentsInterface;
+import info.nightscout.androidaps.plugins.ConfigBuilder.ConfigBuilderPlugin;
 import info.nightscout.androidaps.plugins.IobCobCalculator.AutosensData;
 import info.nightscout.androidaps.plugins.IobCobCalculator.IobCobCalculatorPlugin;
 import info.nightscout.utils.SP;
@@ -45,17 +45,25 @@ import info.nightscout.utils.SP;
 public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
     private static Logger log = LoggerFactory.getLogger(TreatmentsPlugin.class);
 
-    public static IobTotal lastTreatmentCalculation;
-    public static IobTotal lastTempBasalsCalculation;
+    private static TreatmentsPlugin treatmentsPlugin;
+
+    public static TreatmentsPlugin getPlugin() {
+        if (treatmentsPlugin == null)
+            treatmentsPlugin = new TreatmentsPlugin();
+        return treatmentsPlugin;
+    }
+
+    private IobTotal lastTreatmentCalculation;
+    private IobTotal lastTempBasalsCalculation;
 
     public static List<Treatment> treatments;
-    private static Intervals<TemporaryBasal> tempBasals = new NonOverlappingIntervals<TemporaryBasal>();
-    private static Intervals<ExtendedBolus> extendedBoluses = new NonOverlappingIntervals<ExtendedBolus>();
-    private static Intervals<TempTarget> tempTargets = new OverlappingIntervals<TempTarget>();
+    private static Intervals<TemporaryBasal> tempBasals = new NonOverlappingIntervals<>();
+    private static Intervals<ExtendedBolus> extendedBoluses = new NonOverlappingIntervals<>();
+    private static Intervals<TempTarget> tempTargets = new OverlappingIntervals<>();
     private static ProfileIntervals<ProfileSwitch> profiles = new ProfileIntervals<>();
 
-    private static boolean fragmentEnabled = true;
-    private static boolean fragmentVisible = true;
+    private boolean fragmentEnabled = true;
+    private boolean fragmentVisible = true;
 
     @Override
     public String getFragmentClass() {
@@ -100,7 +108,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public boolean showInList(int type) {
-        return !Config.NSCLIENT;
+        return !Config.NSCLIENT && !Config.G5UPLOADER;
     }
 
     @Override
@@ -114,11 +122,16 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
     }
 
     @Override
+    public int getPreferencesId() {
+        return -1;
+    }
+
+    @Override
     public int getType() {
         return PluginBase.TREATMENT;
     }
 
-    public TreatmentsPlugin() {
+    private TreatmentsPlugin() {
         MainApp.bus().register(this);
         initializeTempBasalData();
         initializeTreatmentData();
@@ -127,7 +140,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         initializeProfileSwitchData();
     }
 
-    public static void initializeTreatmentData() {
+    private static void initializeTreatmentData() {
         // Treatments
         double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
@@ -135,7 +148,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         treatments = MainApp.getDbHelper().getTreatmentDataFromTime(fromMills, false);
     }
 
-    public static void initializeTempBasalData() {
+    private static void initializeTempBasalData() {
         // Treatments
         double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
@@ -144,7 +157,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     }
 
-    public static void initializeExtendedBolusData() {
+    private static void initializeExtendedBolusData() {
         // Treatments
         double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
@@ -153,12 +166,12 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     }
 
-    public void initializeTempTargetData() {
+    private void initializeTempTargetData() {
         long fromMills = System.currentTimeMillis() - 60 * 60 * 1000L * 24;
         tempTargets.reset().add(MainApp.getDbHelper().getTemptargetsDataFromTime(fromMills, false));
     }
 
-    public void initializeProfileSwitchData() {
+    private void initializeProfileSwitchData() {
         profiles.reset().add(MainApp.getDbHelper().getProfileSwitchData(false));
     }
 
@@ -187,8 +200,8 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
             if (!t.isSMB) {
                 // instead of dividing the DIA that only worked on the bilinear curves,
                 // multiply the time the treatment is seen active.
-                long timeSinceTreatment =  time - t.date;
-                long snoozeTime = t.date + (long)(timeSinceTreatment * SP.getDouble("openapsama_bolussnooze_dia_divisor", 2.0));
+                long timeSinceTreatment = time - t.date;
+                long snoozeTime = t.date + (long) (timeSinceTreatment * SP.getDouble("openapsama_bolussnooze_dia_divisor", 2.0));
                 Iob bIOB = t.iobCalc(snoozeTime, dia);
                 total.bolussnooze += bIOB.iobContrib;
             } else {
@@ -197,7 +210,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
             }
         }
 
-        if (!MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses())
+        if (!ConfigBuilderPlugin.getActivePump().isFakingTempsByExtendedBoluses())
             synchronized (extendedBoluses) {
                 for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
                     ExtendedBolus e = extendedBoluses.get(pos);
@@ -211,9 +224,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public void updateTotalIOBTreatments() {
-        IobTotal total = getCalculationToTimeTreatments(System.currentTimeMillis());
-
-        lastTreatmentCalculation = total;
+        lastTreatmentCalculation = getCalculationToTimeTreatments(System.currentTimeMillis());
     }
 
     @Override
@@ -224,7 +235,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         if (profile == null) return result;
 
         long now = System.currentTimeMillis();
-        long dia_ago = now - (new Double(1.5d * profile.getDia() * 60 * 60 * 1000l)).longValue();
+        long dia_ago = now - (Double.valueOf(1.5d * profile.getDia() * 60 * 60 * 1000l)).longValue();
 
         for (Treatment treatment : treatments) {
             if (!treatment.isValid)
@@ -240,7 +251,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
             }
         }
 
-        AutosensData autosensData = IobCobCalculatorPlugin.getLastAutosensData();
+        AutosensData autosensData = IobCobCalculatorPlugin.getLastAutosensDataSynchronized("getMealData()");
         if (autosensData != null) {
             result.mealCOB = autosensData.cob;
         }
@@ -291,6 +302,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         initializeTreatmentData();
         initializeExtendedBolusData();
         updateTotalIOBTreatments();
+        MainApp.bus().post(ev.next);
     }
 
     @Subscribe
@@ -317,7 +329,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
                 total.plus(calc);
             }
         }
-        if (MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses()) {
+        if (ConfigBuilderPlugin.getActivePump().isFakingTempsByExtendedBoluses()) {
             IobTotal totalExt = new IobTotal(time);
             synchronized (extendedBoluses) {
                 for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
@@ -339,9 +351,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public void updateTotalIOBTempBasals() {
-        IobTotal total = getCalculationToTimeTempBasals(System.currentTimeMillis());
-
-        lastTempBasalsCalculation = total;
+        lastTempBasalsCalculation = getCalculationToTimeTempBasals(System.currentTimeMillis());
     }
 
     @Nullable
@@ -351,7 +361,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         if (tb != null)
             return tb;
         ExtendedBolus eb = getExtendedBolusFromHistory(time);
-        if (eb != null && MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses())
+        if (eb != null && ConfigBuilderPlugin.getActivePump().isFakingTempsByExtendedBoluses())
             return new TemporaryBasal(eb);
         return null;
     }
@@ -374,18 +384,16 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public double getTempBasalAbsoluteRateHistory() {
-        PumpInterface pump = MainApp.getConfigBuilder();
-
         TemporaryBasal tb = getTempBasalFromHistory(System.currentTimeMillis());
         if (tb != null) {
-            if (tb.isFakeExtended){
-                double baseRate = pump.getBaseBasalRate();
+            if (tb.isFakeExtended) {
+                double baseRate = ConfigBuilderPlugin.getActivePump().getBaseBasalRate();
                 double tempRate = baseRate + tb.netExtendedRate;
                 return tempRate;
             } else if (tb.isAbsolute) {
                 return tb.absoluteRate;
             } else {
-                double baseRate = pump.getBaseBasalRate();
+                double baseRate = ConfigBuilderPlugin.getActivePump().getBaseBasalRate();
                 double tempRate = baseRate * (tb.percentRate / 100d);
                 return tempRate;
             }
@@ -395,8 +403,10 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public double getTempBasalRemainingMinutesFromHistory() {
-        if (isTempBasalInProgress())
-            return getTempBasalFromHistory(System.currentTimeMillis()).getPlannedRemainingMinutes();
+        TemporaryBasal activeTemp = getTempBasalFromHistory(System.currentTimeMillis());
+        if (activeTemp != null) {
+            return activeTemp.getPlannedRemainingMinutes();
+        }
         return 0;
     }
 
